Update all style and meta balise

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./logo-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="tdphoto"
-      content="My photographies website."
-    />
+    <meta name="language" content="fr" />
+    <meta name="robots" content="index, nofollow">
+    <meta name="author" content="Théophile DEMARLE">
+    <meta name="TD Photographies" content="Théophile DEMARLE | Photographe voyageur"/>
+    <meta name="description" content="Photographe de Normandie. Photographies de France et d'ailleurs.">
+    <meta name="copyright" content="Théophile DEMARLE 2024" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
